src/objects/ERM_to_FM_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Detailed_Structural_Stochastic_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detailed Structural Stochastic Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERM_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERM Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERM_Program_Identified_Risks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERM Program Identified Risks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERM_Risks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERM Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERM_to_FM__c</fullName>
        <label>ERM to FM</label>
        <referenceTo>ERM_to_FM__c</referenceTo>
        <relationshipLabel>ERM to FM Risks</relationshipLabel>
        <relationshipName>ERM_to_FM_Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FM_Risk_Factor__c</fullName>
        <formula>IF(NOT(ISBLANK(Risk__c)),HYPERLINK(&apos;/&apos;+Risk__r.Id,Risk__r.Name),HYPERLINK(&apos;/&apos;+Risk_Factor__r.Id, Risk_Factor__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FM Risk Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FM_Specific_Risks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FM Specific Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FP_A_LRP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECM - LRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_ERM_Risk_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From ERM Risk Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Approach__c</fullName>
        <label>Model Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Detailed Structural Stochastic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residual Standard Deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple Stochastic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERM Program Identified Risks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residual_Standard_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residual Standard Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Factor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FM Risk Factor</label>
        <referenceTo>FM_Risk_Factor__c</referenceTo>
        <relationshipLabel>ERM to FM Risks</relationshipLabel>
        <relationshipName>ERM_to_FM_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk</label>
        <referenceTo>MLN_Risk__c</referenceTo>
        <relationshipLabel>ERM to FM Risks</relationshipLabel>
        <relationshipName>ERM_to_FM_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Simple_Stochastic_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simple Stochastic Model</label>
        <type>Checkbox</type>
    </fields>
    <label>ERM to FM Risk</label>
    <nameField>
        <displayFormat>EDR-{00000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERM to FM Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ModelApproachValidation</fullName>
        <active>true</active>
        <description>Only one of the following can be checked for Model Approach
Detailed_Structural_Stochastic_Model__c
Residual_Standard_Deviation__c
ERM_Program_Identified_Risks__c
Simple_Stochastic_Model__c</description>
        <errorConditionFormula>OR(AND(Detailed_Structural_Stochastic_Model__c == true,OR(ERM_Program_Identified_Risks__c == true,Residual_Standard_Deviation__c == true,Simple_Stochastic_Model__c == true)),
AND(ERM_Program_Identified_Risks__c == true,OR(Detailed_Structural_Stochastic_Model__c == true,Residual_Standard_Deviation__c == true,Simple_Stochastic_Model__c == true)),
AND(Residual_Standard_Deviation__c == true,OR(Detailed_Structural_Stochastic_Model__c == true,ERM_Program_Identified_Risks__c == true,Simple_Stochastic_Model__c == true)),
AND(Simple_Stochastic_Model__c == true,OR(Detailed_Structural_Stochastic_Model__c == true,ERM_Program_Identified_Risks__c == true,Residual_Standard_Deviation__c == true)))</errorConditionFormula>
        <errorMessage>Only one Model Approach check box can be checked</errorMessage>
    </validationRules>
</CustomObject>